--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ out/
 
 ### VS Code ###
 .vscode/
+IAC_ALL/tf_docker/.terraform
+IAC_ALL/tf_docker/terraform.tfstate
+IAC_ALL/tf_docker/terraform.tfstate.backup
+IAC_ALL/tf_docker/.terraform.lock.hcl
+
