--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=9393
 spring.rabbitmq.addresses = localhost:5672
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=depart
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
