--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 server.port=9393
 spring.rabbitmq.addresses = localhost:5672
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=depart
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.username=root
+spring.datasource.password=Testman2k100$
+spring.sql.init.mode=always
